--- a/haskell/fourmolu/fourmolu-bugs.cabal
+++ b/haskell/fourmolu/fourmolu-bugs.cabal
@@ -14,4 +14,5 @@ cabal-version:       >=1.10
 library
   exposed-modules:     PragmaInHaddock
                        ValidHaddockUnparseable
+                       Section
   build-depends:       base >= 4.9 && < 5
